@@ -1,7 +1,41 @@
+typedef struct {
+	int audctl;
+	int poly_index;
+	int div_cycles;
+	int audf1;
+	int audf2;
+	int audf3;
+	int audf4;
+	int audc1;
+	int audc2;
+	int audc3;
+	int audc4;
+	int tick_cycle1;
+	int tick_cycle2;
+	int tick_cycle3;
+	int tick_cycle4;
+	int period_cycles1;
+	int period_cycles2;
+	int period_cycles3;
+	int period_cycles4;
+	int reload_cycles1;
+	int reload_cycles3;
+	int out1;
+	int out2;
+	int out3;
+	int out4;
+	int delta1;
+	int delta2;
+	int delta3;
+	int delta4;
+	char delta_buffer[1024];
+} PokeyState;
+
+extern PokeyState pokey_states[2];
+extern unsigned char atari_sound[2048];
+extern int atari_sound_len;
+
 void PokeySound_Initialize(int stereo);
 void PokeySound_PutByte(int addr, int data, int current_cycle);
 int PokeySound_GetRandom(int addr, int current_cycle);
 void PokeySound_Flush(int current_cycle);
-
-extern unsigned char atari_sound[2048];
-extern int atari_sound_len;
