@@ -1,6 +1,8 @@
 2007-05-09  Piotr Fusik  <fox@scene.pl>
 * acpu.c, acpu.h, asap.c, win32/Makefile: new 6502 emulator
 
+* acpu.c, acpu.h, asap.c, apokeysnd.c, apokeysnd.h: POKEY timer interrupts
+
 
 2007-05-07  Piotr Fusik  <fox@scene.pl>
 * asap.c, asap_internal.h, apokeysnd.c: handle TYPE D and TYPE S SAP files
